# robot-naga

./: .gitignore  README  README.txt  avoid.c  main.c
line_follower/: dumb-robot.c  run.sh
line_follower/backup/: rmi-mr32.c
maze_pathfinder/cibertools-v2.2.3.rmi/: startAll
maze_pathfinder/cibertools-v2.2.3.rmi/GUISample/: GUISample
maze_pathfinder/cibertools-v2.2.3.rmi/robsample/: robsample
maze_pathfinder/cibertools-v2.2.3.rmi/simulator/: cbrobot.cpp  simulator
maze_pathfinder/razernaga/: CMakeLists.txt  Consts.h  Filter.h  Map.cpp  Map.h  MapAlgorithms.cpp  MapAlgorithms.h  MapSDL2.cpp  MapSDL2.h  Position.cpp  Position.h  RazerNaga.cpp  RazerNaga.h  Sensors.cpp  Sensors.h  main.cpp  s1.sh
maze_pathfinder/razernaga/libRobSock/: RobSock.cpp
microrato/: dumb-robot.c  rmi-mr32.c  rmi-mr32.h  run.sh  run_bluetooth.sh
microrato/backup/: avoid.c  avoid.h  follow.c  main.c  rmi-mr32.c
microrato/rmi-deti-rob/doc/: Doxyfile
microrato/rmi-deti-rob/src/: rmi-example.c  rmi-mr32.c
pathfinder/cibertools-v2.2.2.rmi/GUISample/: main.cpp.competitive  robview.cpp
pathfinder/cibertools-v2.2.2.rmi/jClient/: jClient.java
pathfinder/cibertools-v2.2.2.rmi/pClient/: croblink.py
pathfinder/cibertools-v2.2.2.rmi/robsample/: mainRob.c
pathfinder/razernaga/: CMakeLists.txt  Filter.h  Makefile  Map.cpp  Map.h  MapAStar.cpp  MapAStar.h  MapAlgorithms.cpp  MapAlgorithms.h  MapSDL2.cpp  MapSDL2.h  Position.cpp  Position.h  RazerNaga.cpp  RazerNaga.h  Sensors.cpp  Sensors.h  main.cpp  razernaga.pro  robview.cpp  robview.h
pathfinder/razernaga/libRobSock/: Makefile
(+12 files in other folders)
