CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

PROJECT(razernaga)

INCLUDE_DIRECTORIES(libRobSock)
LINK_DIRECTORIES(libRobSock)

ADD_DEFINITIONS(-DCIBERQTAPP)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

ADD_EXECUTABLE(razernaga main.cpp sampapp.h robview.cpp)

TARGET_LINK_LIBRARIES(razernaga ${QT_LIBRARIES} RobSock)
