CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

PROJECT(razernaga)

INCLUDE_DIRECTORIES(libRobSock)
LINK_DIRECTORIES(libRobSock)

ADD_DEFINITIONS(-DCIBERQTAPP)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

FIND_PACKAGE(Qt4 REQUIRED)
FIND_PACKAGE(SDL2 REQUIRED)
INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})

ADD_EXECUTABLE(razernaga main.cpp RazerNaga.cpp RazerNaga.h Sensors.cpp Sensors.h Filter.h Position.cpp Position.h Map.cpp Map.h MapSDL2.cpp MapSDL2.h)

TARGET_LINK_LIBRARIES(razernaga ${QT_LIBRARIES} ${SDL2_LIBRARIES} RobSock)
